# sam3-on-modal

./: .gitignore  README.md  client_example.py  infer_golden_gate.py  infer_video_file.py  main.py  modal_app.py  pyproject.toml
